syntax = "proto3";

package helloworld;

service HelloWorld {
	rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
	string message = 1;
}

message EchoResponse {
	string message = 1;
}
